--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.1
   google_fonts: ^6.2.1
   email_validator: ^2.1.17
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
