--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   email_validator: ^2.1.17
   intl: ^0.19.0
+  table_calendar: ^3.1.1
 
 dev_dependencies:
   flutter_test:
