--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,10 +41,14 @@ dependencies:
   email_validator: ^2.1.17
   intl: ^0.19.0
   table_calendar: ^3.1.1
-
+  photo_view: ^0.14.0
+  
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
