--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   intl: ^0.19.0
   table_calendar: ^3.1.1
   photo_view: ^0.14.0
+  file_picker: ^8.0.0+1
+  url_launcher: ^6.2.6
   
   
 dev_dependencies:
