--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   photo_view: ^0.14.0
   file_picker: ^8.0.0+1
   url_launcher: ^6.2.6
+  image_picker: ^1.0.8
+  flutter_sound: ^9.4.6
+  permission_handler: ^11.3.1
+  audioplayers: ^6.0.0
   
   
 dev_dependencies:
