--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_sound: ^9.4.6
   permission_handler: ^11.3.1
   audioplayers: ^6.0.0
+  camera: 0.10.5+9
   
   
 dev_dependencies:
