--- a/front_end/mobile_app/android/app/src/main/AndroidManifest.xml
+++ b/front_end/mobile_app/android/app/src/main/AndroidManifest.xml
@@ -33,9 +33,10 @@
             android:value="2" />
     </application>
     <queries>
-        <intent>
-            <action android:name="android.intent.action.PROCESS_TEXT"/>
-            <data android:mimeType="text/plain"/>
-        </intent>
-    </queries>
+    <intent>
+        <action android:name="android.intent.action.SENDTO" />
+        <data android:scheme="mailto" />
+    </intent>
+</queries>
+
 </manifest>
