--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   permission_handler: ^11.3.1
   audioplayers: ^6.0.0
   camera: 0.10.5+9
+  video_player: ^2.8.6
   
   
 dev_dependencies:
