--- a/front_end/mobile_app/android/app/build.gradle
+++ b/front_end/mobile_app/android/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.gms.google-services'
 }
 
 def localProperties = new Properties()
@@ -41,6 +42,7 @@ android {
     }
 
     defaultConfig {
+    multiDexEnabled true 
     // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
     applicationId "com.example.mobile_app"
     // You can update the following values to match your application needs.
@@ -65,4 +67,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.android.support:multidex:1.0.3'
+}
