--- a/front_end/mobile_app/android/app/build.gradle
+++ b/front_end/mobile_app/android/app/build.gradle
@@ -22,6 +22,7 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
+apply plugin: 'com.google.gms.google-services'
 
 android {
     namespace "com.example.mobile_app"
