--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -51,6 +51,13 @@ dependencies:
   camera: 0.10.5+9
   video_player: ^2.8.6
   
+  firebase_core: ^2.30.1
+  cloud_firestore: ^4.17.2
+  firebase_storage: ^11.7.4
+  firebase_messaging: ^14.9.1
+  firebase_auth: ^4.19.4
+  google_sign_in: ^6.2.1
+  
   
 dev_dependencies:
   flutter_test:
