--- a/front_end/mobile_app/pubspec.yaml
+++ b/front_end/mobile_app/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   visibility_detector: ^0.4.0+2
   audio_session: ^0.1.19
+  flutter_svg: ^2.0.10+1
+  font_awesome_flutter: ^10.7.0
 
   
   
