--- a/front_end/mobile_app/.vscode/settings.json
+++ b/front_end/mobile_app/.vscode/settings.json
@@ -2,5 +2,6 @@
     "java.configuration.updateBuildConfiguration": "interactive",
     "java.compile.nullAnalysis.mode": "automatic",
     "CodeGPT.apiKey": "CodeGPT Plus Beta",
-    "cmake.sourceDirectory": "C:/Users/oumay/OneDrive/Bureau/pf1/pfe/front_end/mobile_app/linux"
+    "cmake.sourceDirectory": "C:/Users/oumay/OneDrive/Bureau/pf1/pfe/front_end/mobile_app/linux",
+    "python.analysis.typeCheckingMode": "basic"
 }
